--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
             </div>
           </div>
         </div>
-        <div class="header-logo">
+        <div class="header-logo footer-logo">
           <a href="#"><img src="assets/images/logo.png" alt="logo" /></a>
         </div>
       </div>
