--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
           <div class="hero-img">
             <img src="assets/images/hero-img.png" alt="hero-img" />
           </div>
-          <div class="hero-content">
+          <div class="hero-content footer-content">
             <div class="hero-title">
               <h1>
                 Cartea care te va face să râzi, să gândești profund și să devii
